// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AbcText Should render a muted text paragraph 1`] = `
<abc-text
  muted="yes"
>
  <p
    className="abc-text abc-text_muted_yes"
    data-lego="react"
    style={Object {}}
  >
    Hello world!
  </p>
</abc-text>
`;

exports[`AbcText Should render a text paragraph 1`] = `
<abc-text>
  <p
    className="abc-text"
    data-lego="react"
    style={Object {}}
  >
    Hello world!
  </p>
</abc-text>
`;
